<resources>
    <string name="task">Record Food Menu</string>
    <string name="save">Save</string>
    <string name="no_task">No Record Food Menu</string>
    <string name="unsaved_exit_alert">You have unsaved data. Are you sure you want to exit?</string>
    <string name="title_is_required">Task title is required.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="tasks">Food Menu</string>
    <string name="Calorie">Calorie</string>
    <string name="Food">Food</string>
    <string name="record_calorie">Record Calorie</string>
    <string name="work">Work</string>
    <string name="work_title">Food name</string>
    <string name="work_content">Kilocalorie</string>
    <string name="new_work">New Food Menu</string>
    <string name="edit_work">edit work</string>
    <string name="work_date">date</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="total_calorie">Total calorie</string>
    <string name="eat_atdate">Date</string>
    <string name="eat_breakfast">Breakfast</string>
    <string name="eat_dinner">Dinner</string>
    <string name="eat_lunch">Lunch</string>
    <string name="new_eat">New Food</string>
    <string name="about_app">"Calorie app"</string>
    <string name="about_app2">เป็นแอพพลิเคชั่นที่ใช้สำหรับการวางแผนการรับประทานอาหารในแต่ละมื้อของแต่ละวัน</string>
    <string name="kcal">Kilo calorie</string>
    <string name="app_name">Calorie Application</string>
    <string name="home">HOME</string>
    <string name="today">TODAY</string>
    <string name="history">HISTORY</string>
    <string name="about">ABOUT</string>
    <string name="foodsearch">FoodSearch</string>
    <string name="not_found">Not found</string>
    <string name="welcome">Welcome</string>
</resources>
