<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mainueng.calorie.calories1.RecordcalActivity">

    <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar_main"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/record_calorie"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="40dp"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                android:id="@+id/dateEdit"
                android:hint="@string/work_date" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Food"
            android:id="@+id/textView" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:id="@+id/titleEdit"
                android:layout_gravity="center_horizontal"
                android:hint="@string/work_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Calorie"
            android:id="@+id/textView2" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/contentEdit"
                android:hint="@string/work_content"
                android:layout_weight="2" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</RelativeLayout>
