<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mainueng.calorie.calories1.ShowActivity">

    <include android:id="@+id/toolbar_main" layout="@layout/toolbar_main" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Food"
        android:id="@+id/FoodName1"
        android:textIsSelectable="false"
        android:textSize="@dimen/materialize_typography_title"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="79dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/FoodNameView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/materialize_typography_headline"
        android:layout_below="@+id/FoodName1"
        android:layout_alignStart="@+id/textView5" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/work_content"
        android:id="@+id/textView4"
        android:textIsSelectable="false"
        android:textSize="@dimen/materialize_typography_title"
        android:layout_below="@+id/scrollView"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fillViewport="true"
        android:layout_below="@+id/FoodNameView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:id="@+id/CalorieView"
        android:textSize="@dimen/materialize_typography_title"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/work"
        android:id="@+id/textView5"
        android:layout_below="@+id/toolbar_main"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
